# clashx-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  parse.rs  rule.rs  types.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/geoip/: Cargo.toml
crates/geoip/src/: download.rs  lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs  relay.rs  timeout.rs
crates/proxy/src/inbound/: http.rs  mod.rs  socks5.rs
crates/proxy/src/outbound/: direct.rs  mod.rs  reject.rs  socks5.rs  trojan.rs
crates/rule/: Cargo.toml
crates/rule/src/: lib.rs  process.rs
crates/rule/tests/: lazy_eval_bench.rs
crates/subscribe/: Cargo.toml
crates/subscribe/src/: download.rs  lib.rs  manager.rs  state.rs
crates/sysproxy/: Cargo.toml
crates/sysproxy/src/: lib.rs  linux.rs  macos.rs
docs/proposals/: 2026-04-12-rule-engine-expansion.md
docs/reviews/: 2026-04-09-network-proxy-review.md  2026-04-09-performance-evaluation.md  2026-04-09-security-risk-review.md  2026-04-10-network-proxy-review.md  2026-04-10-performance-evaluation.md  2026-04-10-security-risk-review.md  2026-04-11-network-proxy-review.md  2026-04-11-performance-evaluation.md  2026-04-11-security-risk-review.md
docs/superpowers/plans/: 2026-04-09-clashx-rs-implementation.md  2026-04-10-retry-failover.md  2026-04-13-rule-engine-expansion.md
docs/superpowers/specs/: 2026-04-09-clashx-rs-design.md  2026-04-10-retry-failover-design.md  2026-04-13-geoip-rule-support-design.md  2026-04-16-subscribe-design.md
src/: client.rs  control.rs  daemon.rs  main.rs  paths.rs  retry.rs
tests/: config_parse.rs  rule_engine.rs
