[workspace]
members = [
    "crates/config",
    "crates/rule",
    "crates/dns",
    "crates/proxy",
    "crates/sysproxy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
hex = "0.4"
webpki-roots = "0.26"
clap = { version = "4", features = ["derive"] }
dirs = "6"

[package]
name = "clashx-rs"
version.workspace = true
edition.workspace = true

[dependencies]
clashx-rs-config = { path = "crates/config" }
clashx-rs-rule = { path = "crates/rule" }
clashx-rs-dns = { path = "crates/dns" }
clashx-rs-proxy = { path = "crates/proxy" }
clashx-rs-sysproxy = { path = "crates/sysproxy" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
clap.workspace = true
dirs.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
clashx-rs-config = { path = "crates/config" }
clashx-rs-rule = { path = "crates/rule" }
