[package]
name = "clashx-rs-subscribe"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
anyhow.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
